Refactor RecruitmentProcessService into specialized components